--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next-themes": "^0.0.11",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.2.0",
     "swr": "^0.4.2"
   },
   "devDependencies": {
