--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "swr": "^0.4.2"
   },
   "devDependencies": {
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
     "autoprefixer": "^10.2.4",
     "postcss": "^8.2.6",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "^2.0.3",
+    "typescript": "^4.2.3"
   }
 }
