--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
         name: Clone repo
       - uses: actions/setup-node@v1
-        name: Set up node
+        name: Set up Node
       - run: npm ci
         name: Install dependencies
       - run: npm run build
