--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,10 @@ jobs:
       - uses: actions/checkout@v2
         name: Clone repo
       - uses: actions/setup-node@v1
+        with:
+          node-version: '14'
         name: Set up Node
-      - run: npm ci
+      - run: npm ci 
         name: Install dependencies
       - run: npm run build
         name: Build
