--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
     "printWidth": 90,
     "tabWidth": 4,
     "useTabs": false,
-    "semi": false,
+    "semi": true,
     "singleQuote": false,
     "trailingComma": "none",
     "bracketSpacing": true,
