--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,14 +7,13 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        name: Clone repo
-      - uses: actions/setup-node@v1
+      - name: Clone repo
+        uses: actions/checkout@v2
+      - name: Set up Node
+        uses: actions/setup-node@v1
         with:
           node-version: '14'
-        name: Set up Node
-      - run: npm ci
-        name: Install dependencies
-      - run: npm run lint
-        name: Run Linter
-        
+      - name: Install dependencies
+        run: npm ci
+      - name: Run Linter
+        run: npm run lint
