--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "format:fix": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "cntl": "^1.0.0",
     "next": "10.0.7",
     "next-themes": "^0.0.11",
     "react": "17.0.1",
