--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "format:fix": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^10.1.3",
     "next": "10.0.7",
     "next-themes": "^0.0.11",
     "react": "17.0.1",
