--- a/data/PROJECTS.json
+++ b/data/PROJECTS.json
@@ -1,18 +1,18 @@
 [
     {
-        "repo_name": "hangman",
-        "repo_owner": "shreeyachand",
-        "repo_logo": "https://source.unsplash.com/random",
-        "project_type": "Game",
-        "repo_owner_icon": "https://avatars.githubusercontent.com/u/76849512?v=4",
+        "repoName": "hangman",
+        "repoOwner": "shreeyachand",
+        "repoLogo": "https://source.unsplash.com/random",
+        "projectType": "Game",
+        "repoOwnerIcon": "https://avatars.githubusercontent.com/u/76849512?v=4",
         "award": "silver"
     },
     {
-        "repo_name": "discord-botboi-bot",
-        "repo_owner": "alt-ab",
-        "repo_logo": "https://source.unsplash.com/random",
-        "project_type": "Discord Bot",
-        "repo_owner_icon": "https://avatars.githubusercontent.com/u/66260572?v=4",
+        "repoName": "discord-botboi-bot",
+        "repoOwner": "alt-ab",
+        "repoLogo": "https://source.unsplash.com/random",
+        "projectType": "Discord Bot",
+        "repoOwnerIcon": "https://avatars.githubusercontent.com/u/66260572?v=4",
         "award": "silver"
     }
 ]
