--- a/package.json
+++ b/package.json
@@ -44,6 +44,20 @@
     "tailwindcss": "^2.0.3",
     "typescript": "^4.2.3"
   },
+  "prettier": {
+    "printWidth": 110,
+    "tabWidth": 4,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": true,
+    "arrowParens": "always",
+    "requirePragma": false,
+    "insertPragma": false,
+    "proseWrap": "always"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
