--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.1.3",
+    "fuse.js": "^6.4.6",
     "next": "10.0.7",
     "next-themes": "^0.0.11",
     "react": "17.0.1",
